--- a/app/src/main/res/layout/student_list_item.xml
+++ b/app/src/main/res/layout/student_list_item.xml
@@ -12,12 +12,14 @@
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/txtStudentName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="학생이름"
             android:textSize="20sp"
             android:textColor="@color/black"/>
         <TextView
+            android:id="@+id/txtAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="(35세)"
@@ -26,6 +28,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/txtAddress"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
